# VATA

./: .gitignore  README.md  agno_agents.py  agno_pipeline.py  agnoagent.py  codefixer.py  dspy_manim_workflow.py  dspy_manim_workflow1.py  generation.py  generation1.py  main.py  main_advanced_system.py  main_execution.py  manim_code_generator.py  narrative_parser.py  new.py  pyproject.toml  render_manim.py  requirements.txt  script_generator.py  selfhealingcode.py  testing.py
manim_project/generated_code/: chunk_1_code.py
manim_project/prompts/: chunk_1_prompt.txt  chunk_1_specs.json  system_prompt.txt
output/: Microsoft PowerPoint - Lecture14-Development of surfaces-pkghosh [Compatibility Mode].md  RELU-Function and Derived Function Review.json  RELU-Function and Derived Function Review.md  generated_narrative_script.txt  linear_regression_notes.json  linear_regression_notes.md
prompts/: manim_v019_rules.txt  p.txt  prompt.txt  prompt1.txt  prompt_struct.txt  prompt_template.txt
